syntax = "proto3";

package bytebase.store;

import "google/protobuf/duration.proto";
import "google/type/expr.proto";
import "store/approval.proto";
import "store/project_webhook.proto";

option go_package = "generated-go/store";

enum SettingName {
  reserved 16;
  reserved 6; // was WORKSPACE_EXTERNAL_APPROVAL
  reserved 13; // was SCHEMA_TEMPLATE

  SETTING_NAME_UNSPECIFIED = 0;
  AUTH_SECRET = 1;
  BRANDING_LOGO = 2;
  WORKSPACE_ID = 3;
  WORKSPACE_PROFILE = 4;
  WORKSPACE_APPROVAL = 5;
  ENTERPRISE_LICENSE = 7;
  APP_IM = 8;
  WATERMARK = 9;
  AI = 10;
  DATA_CLASSIFICATION = 14;
  SEMANTIC_TYPES = 15;
  SCIM = 17;
  PASSWORD_RESTRICTION = 18;
  ENVIRONMENT = 19;
}

message WorkspaceProfileSetting {
  // The external URL is used for sso authentication callback.
  string external_url = 1;

  // Disallow self-service signup, users can only be invited by the owner.
  bool disallow_signup = 2;

  // Require 2FA for all users.
  bool require_2fa = 3;

  // The duration for token.
  google.protobuf.Duration token_duration = 6;

  // The setting of custom announcement
  Announcement announcement = 7;

  // The max duration for role expired.
  google.protobuf.Duration maximum_role_expiration = 8;

  // The workspace domain, e.g., bytebase.com.
  repeated string domains = 9;

  // Only user and group from the domains can be created and login.
  bool enforce_identity_domain = 10;

  // The workspace database change mode.
  DatabaseChangeMode database_change_mode = 11;

  // Whether to disallow password signin. (Except workspace admins)
  bool disallow_password_signin = 12;

  // Whether to enable metric collection for the workspace.
  bool enable_metric_collection = 13;

  // The session expiration time if not activity detected for the user. Value <= 0 means no limit.
  google.protobuf.Duration inactive_session_timeout = 14;

  // Whether to enable audit logging to stdout in structured JSON format.
  // Requires TEAM or ENTERPRISE license.
  bool enable_audit_log_stdout = 15;
}

message Announcement {
  // We support three levels of AlertLevel: INFO, WARNING, and ERROR.
  enum AlertLevel {
    ALERT_LEVEL_UNSPECIFIED = 0;
    ALERT_LEVEL_INFO = 1;
    ALERT_LEVEL_WARNING = 2;
    ALERT_LEVEL_CRITICAL = 3;
  }

  // The alert level of the announcement.
  AlertLevel level = 1;

  // The text of the announcement.
  string text = 2;

  // The optional link, user can follow the link to check extra details
  string link = 3;
}

message WorkspaceApprovalSetting {
  message Rule {
    ApprovalTemplate template = 1;
    google.type.Expr condition = 2;
    Source source = 3;
    enum Source {
      SOURCE_UNSPECIFIED = 0;
      CHANGE_DATABASE = 1;
      CREATE_DATABASE = 2;
      EXPORT_DATA = 3;
      REQUEST_ROLE = 4;
    }
  }
  repeated Rule rules = 1;
}

message DataClassificationSetting {
  message DataClassificationConfig {
    // id is the uuid for classification. Each project can chose one
    // classification config.
    string id = 1;
    string title = 2;

    message Level {
      string id = 1;
      string title = 2;
      string description = 3;
    }

    // levels is user defined level list for classification.
    // The order for the level decides its priority.
    repeated Level levels = 3;

    message DataClassification {
      // id is the classification id in [0-9]+-[0-9]+-[0-9]+ format.
      string id = 1;
      string title = 2;
      string description = 3;
      optional string level_id = 4;
    }

    // classification is the id - DataClassification map.
    // The id should in [0-9]+-[0-9]+-[0-9]+ format.
    map<string, DataClassification> classification = 4;
  }

  repeated DataClassificationConfig configs = 1;
}

message SemanticTypeSetting {
  message SemanticType {
    // id is the uuid for semantic type.
    string id = 1;
    // the title of the semantic type, it should not be empty.
    string title = 2;
    // the description of the semantic type, it can be empty.
    string description = 3;

    Algorithm algorithm = 6;

    // icon is the icon for semantic type, it can be emoji or base64 encoded image.
    string icon = 7;
  }

  repeated SemanticType types = 1;
}

message Algorithm {
  message FullMask {
    // substitution is the string used to replace the original value, the
    // max length of the string is 16 bytes.
    string substitution = 1;
  }

  message RangeMask {
    message Slice {
      // start is the start index of the original value, start from 0 and should be less than stop.
      int32 start = 1;
      // stop is the stop index of the original value, should be less than the length of the original value.
      int32 end = 2;
      // OriginalValue[start:end) would be replaced with replace_with.
      string substitution = 3;
    }
    // We store it as a repeated field to face the fact that the original value may have multiple parts should be masked.
    // But frontend can be started with a single rule easily.
    repeated Slice slices = 1;
  }

  message MD5Mask {
    // salt is the salt value to generate a different hash that with the word alone.
    string salt = 1;
  }

  message InnerOuterMask {
    int32 prefix_len = 1;
    int32 suffix_len = 2;
    string substitution = 3;

    enum MaskType {
      MASK_TYPE_UNSPECIFIED = 0;
      INNER = 1;
      OUTER = 2;
    }

    MaskType type = 4;
  }

  oneof mask {
    FullMask full_mask = 5;
    RangeMask range_mask = 6;
    MD5Mask md5_mask = 7;
    InnerOuterMask inner_outer_mask = 8;
  }
}

message AppIMSetting {
  message Slack {
    string token = 1;
  }
  message Feishu {
    string app_id = 1;
    string app_secret = 2;
  }
  message Wecom {
    string corp_id = 1;
    string agent_id = 2;
    string secret = 3;
  }
  message Lark {
    string app_id = 1;
    string app_secret = 2;
  }
  message DingTalk {
    string client_id = 1;
    string client_secret = 2;
    string robot_code = 3;
  }
  message Teams {
    // Azure AD tenant ID (Directory ID).
    string tenant_id = 1;
    // Azure AD application (client) ID.
    string client_id = 2;
    // Azure AD client secret.
    string client_secret = 3;
  }

  message IMSetting {
    ProjectWebhook.Type type = 1;
    oneof payload {
      Slack slack = 2;
      Feishu feishu = 3;
      Wecom wecom = 4;
      Lark lark = 5;
      DingTalk dingtalk = 6;
      Teams teams = 7;
    }
  }

  repeated IMSetting settings = 1;
}

enum DatabaseChangeMode {
  DATABASE_CHANGE_MODE_UNSPECIFIED = 0;
  // A more advanced database change process, including custom approval workflows and other advanced features.
  // Default to this mode.
  PIPELINE = 1;
  // A simple database change process in SQL editor. Users can execute SQL directly.
  EDITOR = 2;
}

message SCIMSetting {
  string token = 1;
}

message PasswordRestrictionSetting {
  // min_length is the minimum length for password, should be no less than 8.
  int32 min_length = 1;
  // require_number requires the password must contain at least one number.
  bool require_number = 2;
  // require_letter requires the password must contain at least one letter, regardless of upper case or lower case
  bool require_letter = 3;
  // require_uppercase_letter requires the password must contain at least one upper case letter.
  bool require_uppercase_letter = 4;
  // require_special_character requires the password must contain at least one special character.
  bool require_special_character = 5;
  // require_reset_password_for_first_login requires users to reset their password after the 1st login.
  bool require_reset_password_for_first_login = 6;
  // password_rotation requires users to reset their password after the duration.
  google.protobuf.Duration password_rotation = 7;
}

message AISetting {
  bool enabled = 1;
  enum Provider {
    PROVIDER_UNSPECIFIED = 0;
    OPEN_AI = 1;
    CLAUDE = 2;
    GEMINI = 3;
    AZURE_OPENAI = 4;
  }
  Provider provider = 2;
  string endpoint = 3;
  string api_key = 4;
  string model = 5;
  string version = 6;
}

message EnvironmentSetting {
  repeated Environment environments = 1;

  message Environment {
    // The resource id of the environment.
    // This value should be 4-63 characters, and valid characters
    // are /[a-z][0-9]-/.
    string id = 1;
    // The display name of the environment.
    string title = 2;
    map<string, string> tags = 3;
    string color = 4;
  }
}
